appId: io.hexawallet.keeper
---
- tapOn:
    id: 'view_Version_History'
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: 'btn_back'
- assertTrue: ${output.text_header_title = "Version History"}
- assertTrue: ${output.text_header_subtitle = "You can verify the history of your app upgrades here"}
- assertVisible:
    id: 'view_VersionHistoryList'
- assertVisible: 'Initially installed'
- assertVisible:
    id: 'text_appid'
- tapOn:
    id: 'btn_back'
- waitForAnimationToEnd:
    timeout: 1000
