appId: io.hexawallet.keeper
---
- runFlow: _common_unlock_if_needed.yaml
- tapOn:
    id: "view_wallet_0"
    index: 0
- runFlow:
    when:
      visible:
        id: "btn_close_modal"
    commands:
      - assertVisible: "Continue"
      - tapOn:
          id: "btn_close_modal"
- assertVisible:
    id: "btn_back"
- assertVisible:
    id: "btn_learnMore"
- assertVisible: "Available Balance"
- assertVisible: "Transactions"
- assertVisible:
    id: "btn_Send"
- assertVisible:
    id: "btn_Receive"
- assertVisible:
    id: "btn_Buy"
- assertVisible:
    id: "btn_Settings"
- tapOn:
    id: "btn_learnMore"
- runFlow:
    when:
      visible:
        id: "btn_close_modal"
    commands:
      - tapOn:
          id: "btn_close_modal"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: "btn_back"
