appId: io.hexawallet.keeper
---
- tapOn:
    id: 'view_wallet_0'
    index: 0
- swipe:
    from:
      id: list_transactions
    direction: DOWN
    duration: 2000
- waitForAnimationToEnd:
    timeout: 5000
- repeat:
    while:
      visible:
        id: 'icon_unconfirmed_0'
    commands:
      - runFlow: refreshwallet.yaml
- assertVisible:
    id: 'btn_Settings'
- tapOn:
    id: 'btn_Settings'
