appId: ${APPID}
---
- tapOn:
    id: 'view_wallet_0'
    index: 0
- swipe:
    from:
      id: list_transactions
    direction: DOWN
    duration: 2000
- waitForAnimationToEnd:
    timeout: 5000
- repeat:
    while:
      visible:
        id: 'icon_unconfirmed_0'
    commands:
      - runFlow: refreshwallet.yaml
- assertVisible:
    id: 'btn_View All Coins'
- tapOn:
    id: 'btn_View All Coins'
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    id: 'btn_Select for Mix'
- tapOn:
    id: 'btn_selectUtxos'
    index: 0
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'
- waitForAnimationToEnd:
    timeout: 10000  
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'
- extendedWaitUntil:
    visible:
        id: 'Premixes_container'
    timeout: 60000
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'